feat(user): add put block and delete block routes
